--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,7 @@
       <button id="removeBgBtn">Remove Background (server, better)</button>
       <button id="useFallbackBtn">Use Client-Side Fallback</button>
       <label class="hint">If server returns 402, use fallback or add REMOVE_BG_API_KEY to server .env</label>
-      <label class="hint">
-  🖱️ Drag image to move | 🔍 Scroll to zoom | Click download when ready
-</label>
-
+      <label class="hint">🖱️ Drag image to move | 🔍 Scroll to zoom | Click download when ready</label>
     </div>
 
     <div class="workspace">
